tooling/nargo_cli/tests/snapshots/execution_success/regression_9541/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: u32, b: u8) -> pub u32 {
    a << (b as u32)
}
