tooling/nargo_cli/tests/snapshots/execution_success/regression_9541/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u32, v1: u8):
    (no terminator instruction)
}
[regression_9541] Circuit output: 67108864
